--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "Steven Roest",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
